Fix: Improve red color readability

--- a/src/index.css
+++ b/src/index.css
@@ -97,7 +97,7 @@ All colors MUST be HSL.
     --success: 84 81% 55%;
     --success-foreground: 224 39% 12%;
 
-    --destructive: 0 62.8% 30.6%;
+    --destructive: 14 90% 58%;
     --destructive-foreground: 210 40% 98%;
 
     --border: 217.2 32.6% 17.5%;
